--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "sequelize": "^6.37.5",
     "skiddebt": "file:"
   }
 }
